# fairness-skin-cancer-detection

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.production  LICENSE  PHASE4_IMPLEMENTATION_SUMMARY.md  QUICKSTART_HAM10000.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  release.yml  training.yml
api/: __init__.py  inference.py  main.py  models.py  requirements.txt
configs/: baseline_config.yaml  circle_config.yaml  fairdisco_config.yaml  fairskin_config.yaml  hybrid_config.yaml  production_config.yaml
data/: README.md
docs/: architecture.md  baseline_results.md  circle_implementation.md  circle_training_guide.md  code_quality_standards.md  dataset_access_log.md  datasets.md  docker_guide.md  environment_setup.md  experiment_tracking.md  fairdisco_architecture.md  fairdisco_training_guide.md  fairness_computational_costs.md  fairskin_implementation_plan.md  fairskin_usage_guide.md  fst_annotation_protocol.md  ham10000_integration.md  index.md  open_source_fairness_code.md  phase4_production_hardening.md  roadmap.md  synthetic_augmentation.md  testing_guide.md
docs/about/: authors.md  citation.md  license.md
docs/javascripts/: custom.js
docs/stylesheets/: custom.css
examples/: hybrid_quickstart.py  shap_explanation_demo.py  shap_quickstart.py
experiments/augmentation/: generate_fairskin.py  train_lora.py  train_with_fairskin.py
experiments/baseline/: evaluate_fairness.py  train_efficientnet_b4.py  train_resnet50.py
experiments/fairness/: train_circle.py  train_fairdisco.py
scripts/: create_ham10000_splits.py  generate_ham10000_fst.py  setup_ham10000.py  verify_ham10000.py
src/: __init__.py
src/augmentation/: __init__.py  fairskin_diffusion.py  lora_trainer.py  quality_metrics.py  synthetic_dataset.py
src/compression/: __init__.py  fairprune.py  onnx_export.py  pruning_trainer.py  quantization.py
src/data/: __init__.py  datasets.py  fst_annotation.py  ham10000_dataset.py  preprocessing.py
src/evaluation/: __init__.py  fairness_metrics.py  visualizations.py
src/explainability/: __init__.py  shap_explainer.py  visualization.py
src/fairness/: __init__.py  circle_regularization.py  color_transforms.py
src/models/: __init__.py  circle_model.py  convnextv2.py  efficientnet_baseline.py  fairdisco_model.py  hybrid_model.py  inception_baseline.py  resnet_baseline.py  swin_transformer.py
src/training/: __init__.py  circle_trainer.py  fairdisco_trainer.py  trainer.py
src/utils/: __init__.py
tests/: QA_SUMMARY.md  TESTING_REPORT.md  conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_evaluation_pipeline.py  (+2 more)
(+12 files in other folders)
